--- a/Syanpse.Services.ActiveDirectoryApi/packages.config
+++ b/Syanpse.Services.ActiveDirectoryApi/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="Synapse.Core.Signed" version="1.0.18184" targetFramework="net452" />
-  <package id="Synapse.Server.Extensibility" version="1.0.18154-pre" targetFramework="net452" />
-  <package id="YamlDotNet.Signed" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Synapse.Core.Signed" version="1.0.19092" targetFramework="net461" />
+  <package id="Synapse.Server.Extensibility" version="1.0.19011" targetFramework="net461" />
+  <package id="YamlDotNet" version="6.0.0" targetFramework="net461" />
+  <package id="YamlDotNet.Signed" version="6.0.0" targetFramework="net461" />
 </packages>
